# stateful_macro_rules

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: error.rs  lib.rs  state.rs  util.rs
test_examples/: Cargo.toml  test_examples.rs
test_examples/macro_examples/: Cargo.toml  macro_examples.rs
